2011-11-25  Robert Millan  <rmh@gnu.org>

	* util/getroot.c [HAVE_LIMITS_H]: Include `<limits.h>'.
	(find_root_device_from_libzfs): Add zpool output parser to be used
	as fallback when libzfs isn't available.

2011-11-25  Seth Goldberg <seth.goldberg@oracle.com>

	* po/Makefile.in.in: Add missing escape-continuation.

2011-11-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/cpio.c (grub_cpio_dir): Handle subdirs correctly.

2011-11-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/dl.c (grub_dl_load_segments): Fix alignment handling.

2011-11-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/dl.c (grub_dl_unload): Fix freeing segments.

2011-11-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/x86_64/efi/callwrap.S: Fix the comment.

2011-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/adler32.c: Add missing license specification.
	* grub-core/lib/crc64.c: Likewise.
	* grub-core/loader/i386/pc/plan9.c: Likewise.
	* grub-core/partmap/plan.c: Likewise.

2011-11-13  Lubomir Kundrak  <lkundrak@redhat.com>

	Add facility to debug GRUB with gdb under qemu.

	* grub-core/gdb_grub.in: New file.
	* grub-core/gmodule.pl.in: Likewise.
	* grub-core/Makefile.core.def (gmodule.pl): New script.
	(gdb_grub): Likewise.

2011-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mount.c (argp_parser): Accept relative pathes.
	* util/grub-fstest.c (argp_parser): Likewise.

2011-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Plan9 support.

	* Makefile.util.def (libgrubmods): Add
	grub-core/partmap/plan.c.
	* docs/grub.texi: Notice Plan9 support.
	* grub-core/Makefile.core.def (plan9): New module.
	(part_plan): Likewise.
	* grub-core/loader/i386/pc/plan9.c: New file.
	* grub-core/partmap/plan.c: Likewise.
	* include/grub/msdos_partition.h (GRUB_PC_PARTITION_TYPE_PLAN9): New
	define.
	(GRUB_PC_PARTITION_TYPE_LINUX_SWAP): Likewise.
	* include/grub/mm.h (grub_extend_alloc): New inline function.
